--- a/css/kurt-customizations.css
+++ b/css/kurt-customizations.css
@@ -1,10 +1,10 @@
-body.doc-width .doc
+body.wide .doc
 {
    max-width: 80rem;  /* Changing this to 'none' widens the page */
 }
 
 @media screen and (min-width:1024px) {
-   body.doc-width .doc {
+   body.wide .doc {
       max-width: 85rem; /* Changing this to 'none' widens the page */
    }
 }
@@ -54,7 +54,7 @@ body.timeline {
   background: #3ea0e2; 
 }
 
-body.timeline.doc-width .doc {
+body.timeline.wide .doc {
   max-width: none;
 }
 
