--- a/css/kurt-customizations.css
+++ b/css/kurt-customizations.css
@@ -45,6 +45,20 @@ body.wide .doc
     display: block;
 }
 
+.image-pair td > img {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background: white;
+  padding: 4px;
+  max-width: 100%;
+  height: auto;
+}
+
+.image-pair td {
+  text-align: center;
+  vertical-align: top;
+}
+
 /* 
 Note: The Poppins font (and the Comfortaa font) are enabled using the Goolge font API in the
 header-styles.hbs partial in antora-supplemental-ui/partials/
