--- a/css/kurt-customizations.css
+++ b/css/kurt-customizations.css
@@ -45,18 +45,13 @@ body.wide .doc
     display: block;
 }
 
-.image-pair td > img {
+img.image-pair-img {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background: white;
   padding: 4px;
   max-width: 100%;
   height: auto;
-}
-
-.image-pair td {
-  text-align: center;
-  vertical-align: top;
 }
 
 /* 
