--- a/css/kurt-customizations.css
+++ b/css/kurt-customizations.css
@@ -19,6 +19,10 @@ body.wide .imageblock img {
   height: auto;
 }
 
+img.scale-25 {
+  width: 25%;
+  height: auto;
+}
 /*
 .image-pair img {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
